--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,12 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/cai_lai_la?characterEncoding=utf-8
+# zlj 本机路径
+#spring.datasource.url=jdbc:mysql://localhost:3306/cai_lai_la?characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=000407
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# 服务器路径
+spring.datasource.url=jdbc:mysql://121.89.194.185:3306/cai_lai_la?characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=000407
+spring.datasource.password=990808
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
